# genetic-ts-timing-csi1000

./: .gitignore  README.md  pyproject.toml
data/archive/: bear_prob.csv  分资产逐日.csv  映射分位.csv
data/cache/: au9999.csv  bond_yields.csv  etf_159915.csv  etf_159980.csv  etf_159981.csv  etf_161226.csv  etf_510300.csv  etf_510500.csv  etf_510880.csv  etf_511260.csv  etf_511880.csv  etf_512100.csv  etf_513100.csv  etf_513130.csv  etf_513500.csv  etf_518880.csv  etf_588000.csv  fut_al0.csv  fut_au0.csv  fut_m0.csv  fut_ma0.csv  fut_ta0.csv  fut_zn0.csv  idx_hsi.csv  idx_sh000012.csv  idx_sh000300.csv  idx_sh000688.csv  idx_sh000832.csv  idx_sh000852.csv  idx_sh000905.csv  idx_sh000922.csv  idx_sz399006.csv  regime_ivix.csv  regime_shibor.csv
docs/: 方法论与可择时性.tex
docs/research_timeability/: report_meta.json  tables.tex
results/final/: 成绩表.csv  逐日.csv
results/ops26/: 组合逐日.csv
scripts/: com.gyturas.csi1000.daily.plist
src/csi1000/: __init__.py  paths.py
src/csi1000.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
v1/: 说明.md
v1/data_cache/: etf_501018.csv  etf_511380.csv  etf_588000.csv  idx_ndx.csv  idx_ndx_long.csv  idx_sh000688.csv  idx_sh000922.csv  regime_northbound.csv
v1/walkforward/: metrics.py
v1/引擎/: 映射对比.py
v1/结果_26算子/: 分资产逐日.csv
v1/结果_无元老挖矿/: 事件.csv  分资产逐日.csv  名册.csv  组合逐日.csv  资产暴露.csv
v2/: 说明.md
v2/data_cache/: etf_159915.csv  etf_510300.csv  etf_510500.csv  etf_510880.csv  (+4 more)
v3/: 说明.md  验收.py
v4/: .gitignore  requirements.txt  说明.md  验收.py
研究_可择时性/: make_report.py  report_en.tex  tables_en.tex  回归明细.csv  报告.tex
(+121 files in other folders)
